# api/docs/swagger.yaml
@@ -1,4 +1,35 @@
 definitions:
+  auth.ChangePasswordReqBody:
+    properties:
+      CurrentPassword:
+        type: string
+      NewPassword:
+        type: string
+    type: object
+  auth.Setting:
+    properties:
+      Language:
+        type: string
+      Notification:
+        type: string
+      PrivacyLevel:
+        type: string
+      Theme:
+        type: string
+    type: object
+  auth.UserRes:
+    properties:
+      DateOfBirth:
+        type: string
+      Email:
+        type: string
+      FullName:
+        type: string
+      Id:
+        type: string
+      Username:
+        type: string
+    type: object
   memory.Comment:
     properties:
       content:
@@ -134,6 +165,62 @@ definitions:
         items:
           type: string
         type: array
+    type: object
+  timeline.GetAllRes:
+    properties:
+      millistones:
+        items:
+          $ref: '#/definitions/timeline.Millistones'
+        type: array
+      total_count:
+        type: integer
+    type: object
+  timeline.Millistone:
+    properties:
+      category:
+        type: string
+      create_at:
+        type: string
+      date:
+        type: string
+      deleted_at:
+        type: integer
+      description:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+      update_at:
+        type: string
+      user_id:
+        type: string
+    type: object
+  timeline.Millistones:
+    properties:
+      category:
+        type: string
+      create_at:
+        type: string
+      date:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+    type: object
+  timeline.MillistonesCreateBody:
+    properties:
+      category:
+        type: string
+      date:
+        type: string
+      description:
+        type: string
+      title:
+        type: string
     type: object
 host: localhost:8080
 info:
@@ -520,6 +607,344 @@ paths:
       summary: Get all memories
       tags:
       - memories
+  /millistones:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of millistones based on optional filters like date,
+        category, user ID, limit, and offset
+      parameters:
+      - description: Date filter (YYYY-MM-DD)
+        in: query
+        name: date
+        type: string
+      - description: Category filter
+        in: query
+        name: category
+        type: string
+      - description: User ID filter
+        in: query
+        name: user_id
+        type: string
+      - description: Limit number of results
+        in: query
+        name: limit
+        type: integer
+      - description: Offset number for pagination
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/timeline.GetAllRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get all millistones based on filters
+      tags:
+      - millistones
+    post:
+      consumes:
+      - application/json
+      description: Create a new millistone with the specified details
+      parameters:
+      - description: Millistoneobjecttobecreated
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/timeline.MillistonesCreateBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Millistone created successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Create a new millistone
+      tags:
+      - millistones
+  /millistones/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a millistone by its ID
+      parameters:
+      - description: Millistone ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Millistone deleted successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete a millistone by ID
+      tags:
+      - millistones
+    get:
+      consumes:
+      - application/json
+      description: Retrieve details of a millistone by its ID
+      parameters:
+      - description: Millistone ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/timeline.Millistone'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get a millistone by ID
+      tags:
+      - millistones
+    put:
+      consumes:
+      - application/json
+      description: Update an existing millistone with the specified details
+      parameters:
+      - description: Millistone ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Updated millistone details
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/timeline.MillistonesCreateBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Millistone updated successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update an existing millistone
+      tags:
+      - millistones
+  /millistones/date:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve millistones within a specified date range for a given
+        user ID
+      parameters:
+      - description: Start date of range (YYYY-MM-DD)
+        in: path
+        name: from_date
+        required: true
+        type: string
+      - description: End date of range (YYYY-MM-DD)
+        in: path
+        name: to_date
+        required: true
+        type: string
+      - description: User ID filter
+        in: query
+        name: user_id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/timeline.GetAllRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get millistones within a date range
+      tags:
+      - millistones
+  /passwords:
+    put:
+      consumes:
+      - application/json
+      description: Update the password of a user with the specified ID
+      parameters:
+      - description: Updated password details
+        in: body
+        name: password
+        required: true
+        schema:
+          $ref: '#/definitions/auth.ChangePasswordReqBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Password updated successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Change user password
+      tags:
+      - passwords
+  /profiles:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the profile of a user with the specified ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth.UserRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get user profile
+      tags:
+      - profiles
+    put:
+      consumes:
+      - application/json
+      description: Update the profile of a user with the specified ID
+      parameters:
+      - description: Updated profile details
+        in: body
+        name: profile
+        required: true
+        schema:
+          $ref: '#/definitions/auth.UserRes'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Profile updated successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Edit user profile
+      tags:
+      - profiles
+  /settings:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the settings of a user with the specified ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth.Setting'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get user settings
+      tags:
+      - settings
+    put:
+      consumes:
+      - application/json
+      description: Update the settings of a user with the specified ID
+      parameters:
+      - description: Updated setting details
+        in: body
+        name: setting
+        required: true
+        schema:
+          $ref: '#/definitions/auth.Setting'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Setting updated successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Edit user settings
+      tags:
+      - settings
   /shares:
     get:
       consumes:
@@ -612,6 +1037,29 @@ paths:
       summary: Unshare a memory
       tags:
       - shares
+  /users:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a user with the specified ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User deleted successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete user
+      tags:
+      - users
 securityDefinitions:
   BearerAuth:
     in: header
